<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TutorialActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="339dp"
        android:layout_height="257dp"
        android:layout_marginTop="20dp"
        android:background="#C8191414"
        android:fontFamily="serif"
        android:text="@string/tutorial4"
        android:textColor="#FF9800"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:layout_height="122dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:background="#C8191414"
        android:fontFamily="serif"
        android:text="@string/tutorial3"
        android:textColor="#FF9800"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/tut_back_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6A101010"
        android:fontFamily="serif-monospace"
        android:onClick="goBack"
        android:text="@string/tutorialbutton"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.134"
        app:strokeColor="#FF9800" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/tutorial1"
        android:textColor="#FF9800"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="334dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:fontFamily="serif"
        android:text="@string/tutorial2"
        android:textColor="#FF9800"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="168dp"
        android:layout_height="185dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/tutorial" />

</androidx.constraintlayout.widget.ConstraintLayout>