<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="135dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="124dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_forest_image"
        android:scaleType="centerInside"
        android:src="@drawable/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6A101010"
        android:fontFamily="serif-monospace"
        android:onClick="startGame"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textStyle="bold"
        app:icon="@drawable/questicon"
        app:iconTint="#FFFFFF"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:strokeColor="#FF9800" />

    <Button
        android:id="@+id/button_tutorial"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6A101010"
        android:fontFamily="serif-monospace"
        android:onClick="viewTutorial"
        android:text="@string/tutorial"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textStyle="bold"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first"
        app:layout_constraintVertical_bias="0.166"
        app:strokeColor="#FF9800" />

    <Button
        android:id="@+id/button_settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6A101010"
        android:fontFamily="serif-monospace"
        android:onClick="openSettings"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_tutorial"
        app:layout_constraintVertical_bias="0.217"
        app:strokeColor="#FF9800" />

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings"
        app:layout_constraintVertical_bias="0.791" />

</androidx.constraintlayout.widget.ConstraintLayout>